# quant-rotation

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT_TEAM.md  AGENT_TEAM_SUBAGENT.md  BAOSTOCK_MIGRATION.md  CHANGELOG-TESTS.md  CHANGELOG.md  Dockerfile  EXTENDED_FLOW_IMPLEMENTATION.md  FACTOR_DOCS.md  GITHUB_SETUP.md  INSTALL.md  LICENSE  OPTIMIZATION-PLAN.md  OPTIMIZATION_SUMMARY.md  PROJECT_CHECKLIST.md  PROJECT_SUMMARY.md  QA-TESTER.md  QUICKSTART.md  README.md  TEST-AGENT.md  TESTER.md  WEB_FLOW_FACTOR_UI.md  docker-compose.yml  index.html  pyproject.toml  ranking.json  report_server.py  requirements-lock-updated.txt  requirements-lock.txt  requirements.txt  test
agents/: __init__.py  base_agent.py  cli.py  data_agent.py  orchestrator.py  prompts.json
assets/: index-DRkhsJKo.js
backtest_results/: backtest_20240101_20260317.csv  backtest_20250101_20260317.csv  backtest_20250101_20260322.csv  backtest_akshare_20240101_20260317.csv  current.benchmarks.json  current.meta.json  current.parquet
config/: config.yaml  runtime.yaml  strategy.yaml  universe.yaml
docs/: AGENT_QUICK_START.md  AGENT_USER_GUIDE.md  FRONTEND_REPORTS.md  FRONTEND_UX_CHECKLIST.md  FUNDAMENTAL_OPTIMIZATION.md  GITHUB_ACTIONS_SETUP.md  OPTIMIZATION.md  OPTIMIZATION_SUMMARY.md  OPTIMIZATION_SUMMARY_20260331.md  PRD.md  PROJECT_SUMMARY.md  QUANT_DIAGNOSTIC_REPORT.md  README.md  TECHNICAL_SPEC.md  UX_OPTIMIZATION_HOLDINGS_RANKING.md  VISUALIZATION_GUIDE.md  backtest_optimization_plan.md  optimizer_usage.md
legacy/: README.md
reports/: backtest_enhanced_20250101.csv  strategy_experiments.md  test_report_summary.html  test_report_trades.html  trades_enhanced_20250101.csv
requirements/: base.txt  dev.txt  lock.txt
scripts/: backtest_baostock.py  backtest_incremental.py  compare_trend_variants.py  daily_run.py  daily_run_baostock.py  experiment_alpha_optimizations.py  generate_backtest_json.py  generate_data.py  generate_factor_ic_report.py  generate_history_data.py  generate_performance_attribution.py  generate_risk_report.py  generate_ux_report.py  generate_web_data.py  health_check.py  optimize_multi_objective.py  optimize_params.py  qa-tester.py  run_agent.sh  run_factor_analysis.py  run_quant_diagnostics.py  test_cooldown.py  test_extended_flow.py  test_flow_factor.py  test_page.py  validate_backtest_results.py  validate_data_consistency.py  verify_optimization.py
site/: backtest.json  data.json  history.json  index.html  ranking.json
src/: __init__.py  backtest_utils.py  config_loader.py  dashboard_builder.py  data_fetcher.py  data_fetcher_baostock.py  data_fetcher_optimized.py  data_quality.py  factor_analysis.py  factor_engine.py  factor_engine_enhanced.py  market_regime.py  optimizer.py  portfolio.py  provenance.py  risk_manager.py  scoring.py  scoring_baostock.py  scoring_factory.py  scoring_vectorized.py  strategy_baostock.py  strategy_summary.py  validation.py
tests/: test_config_loader.py  (+13 more)
(+139 files in other folders)
